--- a/.github/workflows/run-doc.yml
+++ b/.github/workflows/run-doc.yml
@@ -14,3 +14,4 @@ jobs:
       #   run: npm install -g markdownlint-cli
       # - name: Lint docs
       #   run: markdownlint '**/*.md'
+      #   test check
