--- a/.github/workflows/ci-dispatcher.yml
+++ b/.github/workflows/ci-dispatcher.yml
@@ -22,7 +22,7 @@ jobs:
           filters: |
             rust:
               - '**/*.rs'
-              - 'Cargo.toml'
+              - '**/*.toml'
               - 'Cargo.lock'
               - 'scripts/**'
             docs:
